<resources>
    <string name="app_name">易结算新</string>


    <!-- 登录界面 -->
    <string name="login">登录</string>
    <string name="uesr_name">帐号:</string>
    <string name="uesr_password">密码:</string>
    <string name="automatic_login">自动登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="registered">注册</string>
    <string name="uesr_name_hint">请输入手机号</string>
    <string name="uesr_password_hint">请输入密码</string>
    <string name="terminal_system">——终端店员奖励系统——</string>

    <!-- 注册界面 -->

    <string name="registered_data">注册资料</string>
    <string name="member_name">会员名:</string>
    <string name="login_pass">登录密码:</string>
    <string name="phone_number">手机号:</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">验证码:</string>
    <string name="new_password">新密码:</string>
    <string name="input_verification_code">请输入短信验证码</string>
    <string name="again_get_verification_code">重新接收短信</string>
    <string name="again_request1">您可以</string>
    <string name="again_request2">秒后重新获取</string>
    <string name="account_name">帐号:</string>
    <string name="account_name_hint">请输入持卡人姓名</string>
    <string name="card_number">卡号:</string>
    <string name="card_number_hint">请输入银行卡号</string>
    <string name="banks">银行:</string>
    <string name="bank">开户银行:</string>
    <string name="bank_hint">请输入您的开户银行所在分行</string>
    <string name="bank_hints">请输入您的开户银行</string>
    <string name="region">地区:</string>
    <string name="address">详细地址:</string>
    <string name="store_address">店铺地址:</string>
    <string name="confirm_submit">确认提交</string>
    <string name="confirm">确  认</string>
    <string name="brank_bank">请输入银行网点名称</string>

    <!-- 主界面 -->
    <string name="product_introduction">产品介绍</string>
    <string name="reward_policy">奖励政策</string>
    <string name="enter_settlement">进入结算</string>
    <string name="terminal_system1">终端店员奖励系统</string>
    <string name="meid">MEID:</string>
    <string name="meid_title">MEID</string>
    <string name="meid_hint">请扫描或输入MEID号</string>
    <string name="settlement_pass">结算码:</string>
    <string name="settlement_pass_hint">请扫描或输入结算码</string>
    <string name="confirm_sttlement">确认结算</string>
    <string name="scanning">扫一扫</string>
    <string name="settlement_success">结算成功 本次明细</string>
    <string name="settlement_time">时间:</string>
    <string name="model">型号:</string>
    <string name="settlement_price">结算单价:</string>
    <string name="settlement_time_title">时间</string>
    <string name="model_title">型号</string>
    <string name="settlement_price_title">结算单价</string>
    <string name="check_settlement_info">查看所有结算明细</string>

    <!-- 我的账户 -->
    <string name="my_account">我的账户</string>
    <string name="account">账户</string>
    <string name="my_settlement">我的结算</string>
    <string name="about_us">关于我们</string>
    <string name="version_checking">版本检测</string>
    <string name="exit">退出当前帐号</string>

    <!-- 修改帐号 -->
    <string name="modify_account">修改账户</string>
    <string name="modify_pass">修改登录密码</string>
    <string name="modify_phone_number">修改手机号码</string>
    <string name="modify_bank_card_info">修改银行卡信息</string>
    <string name="modify_address_info">修改地址信息</string>

    <!-- 修改密码 -->
    <string name="old_pass">原密码:</string>
    <string name="new_pass">新密码:</string>
    <string name="confirm_new_pass">确认新密码:</string>
    <string name="old_pass_hint">请输入原密码</string>
    <string name="new_pass_hint">请输入新密码</string>
    <string name="confirm_new_pass_hint">再次输入新密码</string>
    <string name="confirm_modify">确认修改</string>

    <!-- 修改手机号码 -->
    <string name="old_number">原手机号:</string>
    <string name="new_number">新手机号:</string>
    <string name="confirm_new_number">确认新手机号:</string>
    <string name="old_number_hint">请输入原手机号</string>
    <string name="new_number_hint">请输入新手机号</string>
    <string name="confirm_number_pass_hint">再次输入新手机号</string>

    <!-- 分享 -->
    <string name="weixin">微信</string>
    <string name="weixin_pengyouquan">朋友圈</string>
    <string name="qq_kongjian">QQ空间</string>
    <string name="xinlang_weibo">新浪微博</string>
    <string name="copy_link">复制链接</string>
    <string name="msg">消息</string>
    <string name="email">邮件</string>

    <!-- 关于我们 -->
    <string name="software_version">软件版本:</string>
    <string name="company_name">深圳市比翼小蜜蜂科技有限公司</string>
    <string name="disclaimer">免责声明</string>
    <!-- 版本更新 -->
    <string name="lastest_version">已经是最新版本</string>
    <string name="no_wifi">没有无线网络连接, 仅在无线网络状态下更新</string>
    <string name="time_out">网络连接超时, 请检查您的网络连接</string>
</resources>
