<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/face_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/top_title"
        layout="@layout/include_title" />

    <LinearLayout
        android:id="@+id/name_pass_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_title"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView style="@style/LongLine" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/uesr_name"
                android:textColor="@color/back"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/name"
                android:background="@null"
                android:hint="@string/uesr_name_hint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/delete_user_name"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@mipmap/delete"
                android:visibility="gone" />
            <!--  visible显示；invisible显示黑背景条；gone不显示
               在类中，可以设置其显示与否，setVisibility(View.GONE);不显示
             setVisibility(View.VISIBLE);显示 -->
        </RelativeLayout>

        <TextView
            style="@style/LongLine"
            android:layout_marginLeft="15dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/uesr_password"
                android:textColor="@color/back"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="200dp"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/password"
                android:background="@null"
                android:hint="@string/uesr_password_hint"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/delete_user_pass"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@mipmap/delete"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView style="@style/LongLine" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/automatic_login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_pass_layout"
        android:layout_marginTop="20dp">


        <CheckBox
            android:id="@+id/automatic_login_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/automatic_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/automatic_login_icon"
            android:text="@string/automatic_login"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/automatic_login_layout"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:background="@color/login_btn_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/registered_btn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/login_btn"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/registered"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@mipmap/z" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@mipmap/x" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@mipmap/n" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/terminal_system"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>