<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sziit.easypay.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/include_common_title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/bg_divider" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="电话号码"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtTxt_main_registered_phone_number"
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/input_phone_number"
                        android:inputType="phone"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/shugang"
                        android:layout_width="5dp"
                        android:layout_height="35dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:text="|"
                        android:textColor="@color/gray"
                        android:textSize="40sp" />

                    <Button
                        android:id="@+id/btn_main_get_verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:background="@color/login_btn_bg"
                        android:gravity="center"
                        android:text="@string/get_verification_code"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    style="@style/LongLine"
                    android:layout_marginLeft="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/verification_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="验证码"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtTxt_main_input_verification_code"
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/input_verification_code"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/ll_main_again_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tv_main_seconds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/back"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/again_request2"
                            android:textColor="@color/back"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/refistered_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/login_pass"
                        android:textColor="@color/back"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edtTxt_main_refistered_user_pass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/uesr_password_hint"
                        android:inputType="textPassword"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView style="@style/LongLine" />

                <TextView
                    style="@style/LongLine"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/account_name"
                            android:textColor="@color/back"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtTxt_main_account_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:hint="@string/account_name_hint"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        style="@style/LongLine"
                        android:layout_marginLeft="10dp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/card_number"
                            android:textColor="@color/back"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtTxt_main_card_numbers"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:hint="@string/card_number_hint"
                            android:inputType="number"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <TextView
                        style="@style/LongLine"
                        android:layout_marginLeft="10dp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/banks"
                            android:textColor="@color/back"
                            android:textSize="15sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp">

                            <Spinner
                                android:id="@+id/spn_main_bank_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true" />

                            <Spinner
                                android:id="@+id/spn_main_bank_province"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/spn_main_bank_name" />

                            <Spinner
                                android:id="@+id/bank_city"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/spn_main_bank_name"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@+id/spn_main_bank_province" />

                            <Spinner
                                android:id="@+id/branch_bank"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/spn_main_bank_province"
                                android:visibility="gone" />

                            <EditText
                                android:id="@+id/edtTxt_main_branch_bank_edtext"
                                android:layout_width="220dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:hint="@string/brank_bank"
                                android:textSize="15sp" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView style="@style/LongLine" />

                    <TextView
                        style="@style/LongLine"
                        android:layout_marginTop="10dp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/region"
                            android:textColor="@color/back"
                            android:textSize="15sp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <Spinner
                                android:id="@+id/spn_main_province_spinner"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content" />

                            <Spinner
                                android:id="@+id/spn_main_regionr"
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/spn_main_province_spinner" />

                            <Spinner
                                android:id="@+id/spn_main_city_spinner"
                                android:layout_width="140dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        style="@style/LongLine"
                        android:layout_marginLeft="10dp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/store_address"
                            android:textColor="@color/back"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edtTxt_address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView style="@style/LongLine" />

                <Button
                    android:id="@+id/btn_main_registered_confirm_submit"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/login_btn_bg"
                    android:gravity="center"
                    android:text="@string/confirm_submit"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_line" />


</LinearLayout>
